--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,17 @@
 [package]
 name = "dprint-plugin-typescript"
-version = "0.95.11"
+version = "0.95.11+sf.2"
 authors = ["David Sherret <dsherret@gmail.com>"]
 edition = "2021"
-homepage = "https://github.com/dprint/dprint-plugin-typescript"
+homepage = "https://github.com/secforge/dprint-plugin-typescript"
 keywords = ["formatting", "formatter", "typescript", "javascript"]
 license = "MIT"
-repository = "https://github.com/dprint/dprint-plugin-typescript"
+repository = "https://github.com/secforge/dprint-plugin-typescript"
 description = "TypeScript and JavaScript code formatter."
+
+[package.metadata]
+dprint_update_url = "https://github.com/secforge/dprint-plugin-typescript/releases/latest/download/latest.json"
+dprint_schema_url_template = "https://github.com/secforge/dprint-plugin-typescript/releases/download/{VERSION}/schema.json"
 
 [lib]
 crate-type = ["lib", "cdylib"]
@@ -29,6 +33,9 @@ name = "specs"
 path = "tests/spec_test.rs"
 harness = false
 
+[build-dependencies]
+toml = "0.9"
+
 [dependencies]
 anyhow = "1.0.64"
 capacity_builder = "0.5.0"
@@ -47,4 +54,3 @@ malva = "0.11.2"
 markup_fmt = "0.19.0"
 pretty_assertions = "1.3.0"
 serde_json = { version = "1.0" }
-
